variables.Variables.scala.error
Compilation error:
Variables:3: error: not found: value isFacingbaggle
if (isFacingbaggle()) {}
    ^