variables.Variables.scala.code
var x=0
var y=0
if (isFacingbaggle()) {}
	else{
    while (isFacingWall ==false ){
      x=x+1}
  	pickupBaggle()
    while (y!=x) {backward()}	
  }